--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 :root {
     --font-family: 'Poppins', sans-serif;
     --text: 400 1rem/1.5 var(--font-family);
@@ -27,4 +33,8 @@
     --green: #C7D78D;
     --blue: #B8CEDC;
     --violet: #C3B2E7;
+}
+
+body {
+    overflow: hidden;
 }
